--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: normalweatherr
 Type: Package
 Title: Package to conduct meteorological/weather normalisation on air quality
     data
-Version: 0.0.3
-Date: 2017-05-22
+Version: 0.0.6
+Date: 2017-05-26
 Authors@R: person("Stuart", "Grange", email = "s.k.grange@gmail.com", 
     role = c("cre", "aut"))
 Maintainer: Stuart K. Grange <s.k.grange@gmail.com>
 Description: Package to conduct meteorological/weather normalisation on air quality
-    data
+    data.
 URL: https://github.com/skgrange/normalweatherr
 License: GPL (>= 2)
 ByteCompile: true
@@ -20,6 +20,7 @@ Imports:
     testthat,
     magrittr,
     randomForest,
+    kernlab,
     doMC,
     strucchange,
     openair
