--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: normalweatherr
 Type: Package
 Title: Package to conduct meteorological/weather normalisation on air quality
     data
-Version: 0.0.10
-Date: 2017-06-09
+Version: 0.0.11
+Date: 2017-06-14
 Authors@R: person("Stuart", "Grange", email = "s.k.grange@gmail.com", 
     role = c("cre", "aut"))
 Maintainer: Stuart K. Grange <s.k.grange@gmail.com>
@@ -24,6 +24,7 @@ Imports:
     doMC,
     strucchange,
     gbm,
+    mgcv,
     openair
 Suggests:
 RoxygenNote: 6.0.1
