--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: normalweatherr
 Type: Package
-Title: Package to conduct meteorological/weather normalisation on air quality
-    data
-Version: 0.0.16
-Date: 2017-06-27
+Title: An R package to conduct meteorological/weather normalisation on air 
+    quality data
+Version: 0.0.17
+Date: 2017-09-13
 Authors@R: person("Stuart", "Grange", email = "s.k.grange@gmail.com", 
     role = c("cre", "aut"))
 Maintainer: Stuart K. Grange <s.k.grange@gmail.com>
-Description: Package to conduct meteorological/weather normalisation on air quality
-    data.
+Description: An R package to conduct meteorological/weather normalisation on air 
+    quality data.
 URL: https://github.com/skgrange/normalweatherr
 License: GPL (>= 2)
 ByteCompile: true
