add variable iterator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calculate_model)
 export(clip_edges)
 export(detect_breakpoints)
 export(normalise_for_meteorology)
+export(normalise_variables)
 export(register_cores)
 export(split_input_data)
 export(timeAverage)
