--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(add_date_variables)
 export(calculate_model)
 export(clip_edges)
 export(detect_breakpoints)
+export(ggtest_prediction)
 export(normalise_for_meteorology)
 export(normalise_variables)
+export(predict_using_test_set)
 export(register_cores)
 export(split_input_data)
 export(timeAverage)
