add trend tester

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(normalise_variables)
 export(predict_using_test_set)
 export(register_cores)
 export(split_input_data)
+export(theil_sen_trend_test)
 export(timeAverage)
 importFrom(dplyr,arrange)
 importFrom(dplyr,data_frame)
