--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(predict_using_test_set)
 export(register_cores)
 export(split_input_data)
 export(theil_sen_trend_test)
+export(theil_sen_trend_vector)
 export(timeAverage)
 importFrom(dplyr,arrange)
 importFrom(dplyr,data_frame)
