--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_date_variables)
 export(calculate_model)
 export(clip_edges)
+export(deseasonalise_stl)
 export(detect_breakpoints)
 export(ggtest_prediction)
 export(normalise_for_meteorology)
