--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: normalweatherr
 Type: Package
 Title: An R package to conduct meteorological/weather normalisation on air 
     quality data
-Version: 0.0.23
-Date: 2017-12-06
+Version: 0.0.24
+Date: 2018-02-19
 Authors@R: person("Stuart", "Grange", email = "s.k.grange@gmail.com", 
     role = c("cre", "aut"))
 Maintainer: Stuart K. Grange <s.k.grange@gmail.com>
@@ -28,4 +28,5 @@ Imports:
     openair,
     ggplot2
 Suggests:
+    pdp
 RoxygenNote: 6.0.1
