--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,14 +16,17 @@ export(theil_sen_trend_test)
 export(theil_sen_trend_vector)
 export(timeAverage)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,data_frame)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
